@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-21 MH         Minimal linking for pgAgent under *nix
 2006-02-21 DP  1.4.2  Fix a typo in the admin pack README [August Zajonc]
 2006-02-19 AP  1.4.2  Fix serial column detection for 8.1 per Kris Jurka
 2006-02-19 AP         Display column dependencies
